# api/openapi.yaml
@@ -226,7 +226,7 @@ security:
   - BearerAuth: []
 
 paths:
-  /health:
+  /api/v1/health:
     get:
       tags: ["Health"]
       summary: Health check
@@ -239,7 +239,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Health"
 
-  /users:
+  /api/v1/users:
     post:
       tags: ["Users"]
       summary: Cria um novo usuário
@@ -264,7 +264,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
-  /users/me:
+  /api/v1/users/me:
     get:
       tags: ["Users"]
       summary: Detalhes do usuário
@@ -283,7 +283,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
-  /auth/login:
+  /api/v1/auth/login:
     post:
       tags: ["Auth"]
       summary: Login para obter o token de acesso
@@ -316,7 +316,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
-  /auth/refresh:
+  /api/v1/auth/refresh:
     post:
       tags: ["Auth"]
       summary: Renova access token
